--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="add_new_book_desc">Add new book</string>
     <string name="add_a_new_book_text">Add a New Book</string>
     <string name="navigate_back_desc">Navigate Back</string>
+    <string name="barcode_scanner_desc">Open Barcode Scanner</string>
+    <string name="your_library_label">Your Library</string>
 </resources>
