Add list/grid view toggle

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="sort_desc">Sort book list</string>
     <string name="sorting_options_text">Sorting Options</string>
     <string name="search_history_desc">View search history</string>
+    <string name="toggle_arrangement_desc">Toggle book list arrangement</string>
 </resources>
