Add filtering booklist by status, Made code for converting enum constants into strings cleaner, move steps involved in getting arranged books into different functions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="sorting_options_text">Sorting Options</string>
     <string name="search_history_desc">View search history</string>
     <string name="toggle_arrangement_desc">Toggle book list arrangement</string>
+    <string name="status_filter_menu_desc">Open book status filter menu</string>
 </resources>
