--- a/features/modifybook/src/main/res/values/strings.xml
+++ b/features/modifybook/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="book_type_label">Book Type</string>
     <string name="editing_text">Editing %1$s</string>
     <string name="add_image_desc">Add Cover Image</string>
+    <string name="volumes_read_label">Volumes Read</string>
+    <string name="total_volumes_label">Total Volumes</string>
 </resources>
