--- a/features/more/src/main/res/values/strings.xml
+++ b/features/more/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="check_for_updates_label">Check for updates</string>
     <string name="open_source_licenses_label">Open source licenses</string>
     <string name="visit_repo_label">Visit repo</string>
+    <string name="file_scan_text">File Scan</string>
 </resources>
