Extract string resources in most Composables

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="toggle_arrangement_desc">Toggle book list arrangement</string>
     <string name="status_filter_menu_desc">Open book status filter menu</string>
     <string name="reader_label">Reader</string>
+    <string name="cancel">Cancel</string>
+    <string name="open_menu">Open menu</string>
 </resources>
