--- a/features/more/src/main/res/values/strings.xml
+++ b/features/more/src/main/res/values/strings.xml
@@ -14,4 +14,28 @@
     <string name="open_source_licenses_label">Open source licenses</string>
     <string name="visit_repo_label">Visit repo</string>
     <string name="file_scan_text">File scan</string>
+    <string name="version_copied">App version copied to clipboard</string>
+    <string name="app_repo_url">https://github.com/Enoch02/LiteraryLinc/releases</string>
+    <string name="restore_complete_success">Restore Completed Successfully</string>
+    <string name="file_scan">File scan</string>
+    <string name="autostart_scans">Autostart Scans</string>
+    <string name="scanning">Scanning</string>
+    <string name="start_scan">Start Scan</string>
+    <string name="reload_covers">Reload covers</string>
+    <string name="reload_covers_desc">Try to load covers for documents with missing covers</string>
+    <string name="scan_locations">Scan Locations</string>
+    <string name="select_app_directory">Select app directory</string>
+    <string name="current">Current: %1$s</string>
+    <string name="no_dir_picked_msg">This is where the app will scan by default</string>
+    <string name="select_other_directories">Select other directories</string>
+    <string name="total_selected">Total Selected: %1$s</string>
+    <string name="remove_other_directories">Remove other directories</string>
+    <string name="cancel">Cancel</string>
+    <string name="scanned_directories">Scanned Directories</string>
+    <string name="delete">Delete</string>
+    <string name="appearance">Appearance</string>
+    <string name="always_dark_mode_label">Always dark mode</string>
+    <string name="always_dark_mode_desc">Dark mode is always on</string>
+    <string name="dynamic_colors_label">Dynamic Colors</string>
+    <string name="toggle_dynamic_colors_desc">Toggle dynamic colors</string>
 </resources>
