Remove unused imports

--- a/features/bookdetail/src/main/res/values/strings.xml
+++ b/features/bookdetail/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="delete_entry_warning">Do you want to delete this entry?</string>
-    <string name="nothing">There\'s nothing here... 🥲</string>
+    <string name="nothing">There\'s nothing here… 🥲</string>
     <string name="additional_notes">Additional Notes</string>
     <string name="status">Status</string>
     <string name="pages">Pages</string>
