--- a/features/reader/src/main/res/values/strings.xml
+++ b/features/reader/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="warning">Warning</string>
     <string name="document_removal_warning">Do you want to remove this document in the book list? This action can not be undone.</string>
     <string name="chooser_title">Share Using</string>
+    <string name="document_deletion_warning">Do you want to delete this document? This action can not be undone</string>
+    <string name="blank" />
 </resources>
