--- a/features/reader/src/main/res/values/strings.xml
+++ b/features/reader/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="chooser_title">Share Using</string>
     <string name="document_deletion_warning">Do you want to delete this document? This action can not be undone</string>
     <string name="blank" />
+    <string name="document_missing_warning">This document\'s file is missing</string>
+    <string name="ok">Ok</string>
 </resources>
