--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="reader_label">Reader</string>
     <string name="cancel">Cancel</string>
     <string name="open_menu">Open menu</string>
+    <string name="filters">Filters</string>
 </resources>
