--- a/document-viewer/src/main/res/values/strings.xml
+++ b/document-viewer/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
 	<string name="search">Search&#x2026;</string>
 	<string name="searching_">Searching&#x2026;</string>
 	<string name="text_not_found">Text not found</string>
+    <string name="ok">Ok</string>
+    <string name="password_required">Password Required</string>
 </resources>
