--- a/features/reader/src/main/res/values/strings.xml
+++ b/features/reader/src/main/res/values/strings.xml
@@ -20,5 +20,5 @@
     <string name="document_deletion_warning">Do you want to delete this document? This action can not be undone</string>
     <string name="blank" />
     <string name="document_missing_warning">This document\'s file is missing</string>
-    <string name="ok">Ok</string>
+    <string name="ok">OK</string>
 </resources>
