--- a/document-viewer/src/main/res/values/strings.xml
+++ b/document-viewer/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
 	<string name="text_not_found">Text not found</string>
     <string name="ok">OK</string>
     <string name="password_required">Password Required</string>
+    <string name="missing_doc_msg">This Document may have been moved or deleted from the Internal Storage</string>
+	<string name="missing_doc_title">Could not open document</string>
 </resources>
