fix: previous search history is cleared when bottom its sheet closes. Can now query author names in searches

--- a/features/reader/src/main/res/values/strings.xml
+++ b/features/reader/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="blank" />
     <string name="document_missing_warning">This document\'s file is missing</string>
     <string name="ok">OK</string>
+    <string name="search_input_placholder">Book Title or Author</string>
 </resources>
