feature: "cosmetic" changes

--- a/features/more/src/main/res/values/strings.xml
+++ b/features/more/src/main/res/values/strings.xml
@@ -35,8 +35,28 @@
     <string name="delete">Delete</string>
     <string name="appearance">Appearance</string>
     <string name="always_dark_mode_label">Always dark mode</string>
-    <string name="always_dark_mode_desc">Dark mode is always on</string>
+    <string name="always_dark_mode_desc">Set dark mode to always on</string>
     <string name="dynamic_colors_label">Dynamic Colors</string>
-    <string name="toggle_dynamic_colors_desc">Toggle dynamic colors</string>
+    <string name="toggle_dynamic_colors_desc">Use Material3\'s dynamic color scheme</string>
     <string name="licenses">Licenses</string>
+    <string name="start_scan_desc">Add new documents to the readerlist</string>
+    <string name="total_documents">"Total documents: "</string>
+    <string name="total_documents_desc">Amount of documents present in the readerlist</string>
+    <string name="autostart_scans_desc">Periodically scan for new documents</string>
+    <string name="remove_other_directories_desc">Remove the directories the app scans for documents</string>
+    <string name="volume_paging">Volume paging</string>
+    <string name="volume_paging_desc">Enable using the volume button to change pages in the document viewer</string>
+    <string name="show_confirmation_dialogs">Show confirmation dialogs</string>
+    <string name="show_confirmation_dialogs_desc">Display a warning dialog before the deletion of booklist and readerlist entries</string>
+    <string name="create_csv_bkup">Create CSV backup</string>
+    <string name="create_csv_bkup_desc">Backup entries in a CSV file. Images are encoded to base64</string>
+    <string name="restore_csv_bkup">Restore CSV backup</string>
+    <string name="restore_csv_bkup_desc">Restore backup from a CSV file</string>
+    <string name="open_source_licenses_desc">Check out the libraries used to build this application</string>
+    <string name="check_for_updates_desc">Check if new releases are available</string>
+    <string name="visit_repo_desc">View the source code</string>
+    <string name="file_scan_desc">Auto scans, start scans, select scan locations</string>
+    <string name="settings_desc">Theme, dynamic colors, app behavior</string>
+    <string name="bckup_res_desc"><![CDATA[CSV Backup & Restore]]></string>
+    <string name="about_desc">Version, licenses, check for updates</string>
 </resources>
