--- a/features/more/src/main/res/values/strings.xml
+++ b/features/more/src/main/res/values/strings.xml
@@ -69,4 +69,7 @@
     <string name="every_twelve_hours">Every 12 hours</string>
     <string name="excel_friendly_export">Excel Friendly Export</string>
     <string name="excel_friendly_export_desc">Export without covers. Makes the CSV file easier to view in Excel</string>
+    <string name="behaviour">Behaviour</string>
+    <string name="show_doc_viewer_bars">Show document viewer bars by default</string>
+    <string name="show_doc_viewer_bars_desc">Make the top and bottom bars visible (or not) when a document is opened</string>
 </resources>
