--- a/features/modifybook/src/main/res/values/strings.xml
+++ b/features/modifybook/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="author">Author</string>
     <string name="add_cover_image">Add Cover Image</string>
     <string name="book_title">Book Title</string>
+    <string name="cover_image_picker_label">Add Cover Image</string>
 </resources>
