--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="cancel">Cancel</string>
     <string name="open_menu">Open menu</string>
     <string name="filters">Filters</string>
+    <string name="delete_selection_desc">Delete Selection</string>
 </resources>
