--- a/features/booklist/src/main/res/values/strings.xml
+++ b/features/booklist/src/main/res/values/strings.xml
@@ -8,4 +8,9 @@
     <string name="warning">Warning</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
+    <string name="delete_selection_desc">Delete Selection</string>
+    <string name="clear_selection_desc">Clear Selection</string>
+    <string name="select_all_desc">Select All</string>
+    <string name="invert_selection_desc">Invert Selection</string>
+    <string name="book_list_multi_deletion_warning">Do you want to delete %1$s book data?</string>
 </resources>
