--- a/features/stats/src/main/res/values/strings.xml
+++ b/features/stats/src/main/res/values/strings.xml
@@ -7,4 +7,12 @@
     <string name="currently_reading">%1$s Books</string>
     <string name="completed_this_year">Completed this Year</string>
     <string name="rough_estimate">*Rough Estimate</string>
+    <string name="statistics_label">Statistics</string>
+    <string name="edit_reading_goal_desc">Edit Reading Goal</string>
+    <string name="cancel">Cancel</string>
+    <string name="save">Save</string>
+    <string name="reading_goal">Reading Goal</string>
+    <string name="modify_reading_goal">Modify Reading Goal</string>
+    <string name="progress">Progress</string>
+    <string name="reading_goal_text">Reading Goal: %1$s/%2$s Books</string>
 </resources>
