--- a/features/booklist/src/main/res/values/strings.xml
+++ b/features/booklist/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="select_all_desc">Select All</string>
     <string name="invert_selection_desc">Invert Selection</string>
     <string name="book_list_multi_deletion_warning">Do you want to delete %1$s book data?</string>
+    <string name="search_input_placholder">Book Title or Author\n</string>
 </resources>
