--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -182,4 +182,5 @@
     <string name="progress">Progress</string>
     <string name="reading_goal_text">Reading Goal: %1$s/%2$s Books</string>
     <string name="set_reading_goal_msg">Tap the edit button to set a reading goal</string>
+    <string name="clear">Clear</string>
 </resources>
